i added connection to postgreSQL, but it doesn't work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 quarkus.http.host=0.0.0.0
+
+quarkus.datasource.db-kind=pg
+quarkus.datasource.jdbc.db-kind=postgresql
+quarkus.datasource.username=postres
+quarkus.darasource.password=9514682
+
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/expressionstory
