--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
             <artifactId>quarkus-rest-jackson</artifactId>
             <version>3.12.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-jdbc-postgresql -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-jdbc-postgresql</artifactId>
+            <version>3.12.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.quarkus/quarkus-hibernate-orm-panache -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-hibernate-orm-panache</artifactId>
+            <version>3.12.1</version>
+        </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-junit5</artifactId>
