--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 quarkus.http.host=0.0.0.0
 
-quarkus.datasource.db-kind=pg
-quarkus.datasource.jdbc.db-kind=postgresql
-quarkus.datasource.username=postres
-quarkus.darasource.password=9514682
-
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/expressionstory
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=postgres
+quarkus.datasource.password=qwerty
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/calculator
 
 quarkus.http.cors=true
 %dev.quarkus.http.cors.origins=/.*/
